isotopes-and-atomic-mass: Added the ability to override the average atomic mass and the isotope proportions.  This is needed to make the "Nature's Mix" match actual natural values for each element.
# 2.01.03 (49960) Mar 18, 2011
3/18/11 Added pie chart labels.
# 2.01.02 (49878) Mar 16, 2011
3/16/11 Deploying snapshot to dev for testing and review.
isotopes-and-atomic-mass: Added ability to clear the test chamber from the canvas.
isotopes-and-atomic-mass: Added Reset All.
isotopes-and-atomic-mass: Got initial version of "stateful behavior" working for 2nd tab.
Incremental progress in factoring out an idempotent method IsotopeMixturesModel.updateIsotopeControllers
Fixed: test chamber doesn't clear when switching between "more" and "less"
Isotopes and buckets are restored after switching elements
# 2.01.00 (49521) Mar 4, 2011
3/4/11 Redeploying due to a glitch with version numbering.
isotopes-and-atomic-mass: Changed title of the abundance indicator.
# 2.01.01 (49407) Mar 2, 2011
3/2/11 isotopes-and-atomic-mass: Publishing a snapshot version for review.
# 2.01.00 (49070) Feb 21, 2011
2/21/11 > Fixed an issue in Build an Atom where the game could crash if running with the timer turned off.
build-an-atom: Fixed an issue where an exception would occur at the end of the game if played without the timer running.
2/16/11 #2727, rewrite GameSettings to use properties exclusively, remove old-style constructors and accessor methods
isotopes-and-atomic-mass: Changed the abundance of tritium to "trace" from zero. 
isotopes-and-atomic-mass: Added a "Reset All" button to the first tab. 
build-an-atom: Fixed an issue where the Reset All button wasn't resetting the view.
isotopes-and-atomic-mass: Added a fixed-size representation of the electron cloud to the 1st tab. 
isotopes-and-atomic-mass: Added the element name indicator to the canvas just above the nucleus. 